syntax = "proto3";

package auth;

import "google/api/annotations.proto";
//import "google/api/http.proto";

option go_package = "github.com/dzamyatin/atomWebsite";

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse) {
    option(google.api.http) = {
      post: "/register"
      body: "*"
    };
  };
  rpc Login (LoginRequest) returns (LoginResponse) {
    option(google.api.http) = {
      post: "/login"
      body: "*"
    };
  };
  rpc RememberPassword (RememberPasswordRequest) returns (RememberPasswordResponse) {
    option(google.api.http) = {
      post: "/remember-password-by-email"
      body: "*"
    };
  };
  rpc ConfirmEmail (ConfirmEmailRequest) returns (ConfirmEmailResponse) {
    option(google.api.http) = {
      post: "/confirm-email"
      body: "*"
    };
  };
  rpc SendEmailConfirmation (SendEmailConfirmationRequest) returns (SendEmailConfirmationResponse) {
    option(google.api.http) = {
      post: "/send-email-confirmation"
      body: "*"
    };
  };
}

message RememberPasswordRequest {
  optional string email = 1;
  optional string phone = 2;
}

message RememberPasswordResponse {}

message SendEmailConfirmationRequest {
  string email = 1;
}

message SendEmailConfirmationResponse {}

message ConfirmEmailRequest {
  string email = 1;
  string code = 2;
}

message ConfirmEmailResponse {}

message RegisterRequest {
  string email = 1; // Email of the user to register.
  string password = 2; // Password of the user to register.
  string phone = 3; // Either email or phone should be presented. (use messenger to send code: "telegram", ...)
}

message RegisterResponse {
  int64 user_id = 1; // User ID of the registered user.[ITR] Импорт очередей Я.Трекер
}

message LoginRequest {
  optional string email = 1; // Email of the user to login.
  string password = 2; // Password of the user to login.
  optional string phone = 3; // Either email or phone should be presented. (use messenger to send code: "telegram", ...)
}

message LoginResponse {
  string token = 1; // Auth token of the logged in user.
}